# opylib

./: LICENSE  README.md  setup.cfg  setup.py
src/opylib/: csv.py  data_import_export.py  datetime_sup.py  db_cache.py  dict_persistent.py  dict_tools.py  files_folders.py  list_tools.py  log.py  main_runner.py  notify.py  rate_limited_execution.py  replit_support.py  shuffle.py  stopwatch.py  str_parse.py  streaming.py  sys_tools.py  timer.py
tests/: config_tests.py  test_csv.py  test_db_cache.py  test_dict_tools.py  test_list_tools.py  test_log.py  test_main_runner.py  test_shuffle.py  test_str_parse.py  test_streaming.py
tests/data/: test_csv_valid_w_header.csv
