[metadata]
name = opylib
version = 0.8.0
author = One
author_email = one.bgz1@gmail.com
description = My frequently used classes and functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c-git/opylib
project_urls =
    Bug Tracker = https://github.com/c-git/opylib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    PyYAML~=6.0
python_requires = >=3.6

[options.packages.find]
where = src
